index.html: Updated Timeline section

--- a/index.html
+++ b/index.html
@@ -2,81 +2,110 @@
 <html >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Build A Tribute Page: Dennis M. Ritchie</title>
-  
-  
+
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
-  
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Philosopher" rel="stylesheet">
+
 </head>
-
 <body>
+
   <div class="jumbotron" id="main-intro">
 
-  <div class="container-fluid text-center">
-    <h1><a href="https://www.bell-labs.com/usr/dmr/www/" target="_blank">Dennis MacAlistair Ritchie</a></h1>
+    <div class="container-fluid text-center">
+      <h1 id="complete-name"><a href="https://www.bell-labs.com/usr/dmr/www/" target="_blank">Dennis MacAlistair Ritchie</a></h1>
 
-    <p>The C programming language creator, UNIX OS co-developer, and<br>"The C Programming Language" book co-author</p>
+      <p id="quick-description">The C programming language creator, UNIX OS co-developer, and<br>"The C Programming Language" book co-author</p>
+    </div>
+
+    <div class="container-fluid text-center">
+      <img class="img-responsive img-thumbnail" id="main-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Dennis_Ritchie_2011.jpg/220px-Dennis_Ritchie_2011.jpg">
+    </div>
   </div>
 
-  <div class="container-fluid text-center">
-    <img class="img-responsive img-thumbnail" id="main-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Dennis_Ritchie_2011.jpg/220px-Dennis_Ritchie_2011.jpg">
-  </div>
-</div>
-
-<div class="container-fluid">
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h4 class="panel-title">Timeline</h4></div>
-    <div class="panel-body">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">2005</h3>
+  <div class="container-fluid">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h4 class="panel-title">Timeline</h4></div>
+      <div class="panel-body">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">1941</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">He was born on September 9, 1941 at Bronxville, New York, USA.</li>
+            </ul>
+          </div>
         </div>
-        <div class="panel-body">
-          <ul class="list-group">
-            <li class="list-group-item">The Industrial Research Institute awarded Ritchie its Achievement Award in recognition of his contribution to science and technology, and to society generally, with his development of the Unix operating system.</li>
-          </ul>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">1967</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">He joined Bell Labs corporation that was "jointly owned by American Telephone and Telegraph Company and its subsidiary Western Electric".</li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">1984</h3>
+          </div>
+          <div class="panel-body"></div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">2005</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">The Industrial Research Institute awarded Ritchie its Achievement Award in recognition of his contribution to science and technology, and to society generally, with his development of the Unix operating system.</li>
+              <li class="list-group-item">The Computing Sciences Research Center of Bell Labs was re-organized and his team was re-distributed the he became of a member of a new team, namely Convergence, Software and Computer Science Laboratory.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">2011</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">Awarded the Japan Prize for Information and Communications for his work in the development of the Unix operating system.</li>
+              <li class="list-group-item">Died at the age of 70.</li>
+            </ul>
+          </div>
         </div>
       </div>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">2011</h3>
-        </div>
-        <div class="panel-body">
-          <ul class="list-group">
-            <li class="list-group-item">Awarded the Japan Prize for Information and Communications for his work in the development of the Unix operating system.</li>
-            <li class="list-group-item">Died at the age of 70.</li>
-          </ul>
-        </div>
+    </div>
+
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h4 class="panel-title">References</h4></div>
+      <div class="panel-body">
+        <ul>
+          <li><a href="https://www.bell-labs.com/usr/dmr/www/" target="_blank">Bell Labs</a></li>
+          <li><a href="https://en.wikipedia.org/wiki/Dennis_Ritchie" target="_blank">Wikipedia</a></li>
+        </ul>
       </div>
     </div>
   </div>
 
-  <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h4 class="panel-title">References</h4></div>
-    <div class="panel-body">
-      <ul>
-        <li><a href="https://www.bell-labs.com/usr/dmr/www/" target="_blank">Bell Labs</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Dennis_Ritchie" target="_blank">Wikipedia</a></li>
-      </ul>
-    </div>
+  <div class="container-fluid text-center">
+    <footer>
+      <p>Created by <a href="https://www.freecodecamp.com/arante" target="_blank">Billy Wilson Arante</a> of Mandaluyong City, Philippines</p>
+      <p>Hosted by <a href="#" target="_blank">GitHub Pages</a></p>
+    </footer>
   </div>
-</div>
 
-<div class="container-fluid text-center">
-  <footer>
-    <p>Created by <a href="https://www.freecodecamp.com/arante" target="_blank">Billy Wilson Arante</a> of Mandaluyong City, Philippines</p>
-    <p><a href="#" target="_blank">GitHub</a> | <a href="#" target="_blank">StackOverflow</a> | <a href="#" target="_blank">Facebook</a></a></p>
-  </footer>
-</div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-  
 </body>
 </html>
