index.html (build-a-tribute-page): Updated caveat alert

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- Caveat -->
   <div class="container-fluid text-center">
-    <div class="alert alert-info" role="alert">Caveat: This site is a <a href="#">work-in-progress</a>.</div>
+    <div class="alert alert-info" role="alert">Caveat: This site is a <a class="alert-link" href="http://dictionary.cambridge.org/us/dictionary/english/work-in-progress">work in progress</a>.</div>
   </div>
 
   <!-- Timeline -->
