--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 </head>
 <body>
   <!-- TODO:
-  1. Dismissable caveat alert.
-  2. Add 6 more year's section in Timeline with atleast 1 content.
-  3. Add new Resources section for tools used to create this site.
+  * Add 6 more year's section in Timeline with atleast 1 content.
   -->
 
   <!-- Main header -->
@@ -37,7 +35,10 @@
 
   <!-- Caveat -->
   <div class="container-fluid text-center">
-    <div class="alert alert-info" role="alert">Caveat: This site is a <a class="alert-link" href="http://dictionary.cambridge.org/us/dictionary/english/work-in-progress">work in progress</a>.</div>
+    <div class="alert alert-info alert-dismissable" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      Caveat: This site is a <a class="alert-link" href="http://dictionary.cambridge.org/us/dictionary/english/work-in-progress">work in progress</a>.
+    </div>
   </div>
 
   <!-- Timeline -->
@@ -78,11 +79,83 @@
         </div>
         <div class="panel panel-default">
           <div class="panel-heading">
+            <h3 class="panel-title">1974</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">He received the ACM award for the outstanding paper of 1974 in systems and languages, in conjunction with Ken Thompson.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">1982</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">He received the IEEE Emmanuel Piore Award, in conjunction with Ken Thompson.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">1983</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">He became a Bell Laboratories Fellow, in conjunction with Ken Thompson.</li>
+              <li class="list-group-item">He received the Association for Computing Machinery Turing Award, in conjunction with Ken Thompson.</li>
+              <li class="list-group-item">He received the ACM Software Systems Award, in conjunction with Ken Thompson.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
             <h3 class="panel-title">1984</h3>
           </div>
           <div class="panel-body">
             <ul class="list-group">
               <li class="list-group-item">He was now identified as working for AT&T Bell Laboratories.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">1988</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">He was elected to the U. S. National Academy of Engineering, in conjunction with Ken Thompson.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">1989</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">He received the C&C Foundation award of NEC, in conjunction with Ken Thompson.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">1990</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">He received the IEEE Hamming Medal, in conjunction with Ken Thompson.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">1999</h3>
+          </div>
+          <div class="panel-body">
+            <ul class="list-group">
+              <li class="list-group-item">He received received the U. S. National Medal of Technology, in conjunction with Ken Thompson.</li>
             </ul>
           </div>
         </div>
@@ -103,8 +176,8 @@
           </div>
           <div class="panel-body">
             <ul class="list-group">
-              <li class="list-group-item">Awarded the Japan Prize for Information and Communications for his work in the development of the Unix operating system.</li>
-              <li class="list-group-item">Died at the age of 70.</li>
+              <li class="list-group-item">He was awarded the Japan Prize for Information and Communications for his work in the development of the Unix operating system.</li>
+              <li class="list-group-item">He died at the age of 70.</li>
             </ul>
           </div>
         </div>
@@ -126,8 +199,8 @@
 
   <div class="container-fluid text-center">
     <footer>
-      <p>Created by <a href="https://github.com/arante/" target="_blank">Billy Wilson Arante</a> of Mandaluyong City, Philippines</p>
-      <p>Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a></p>
+      <p>Created by <a href="https://arante.github.io/" target="_blank">Billy Wilson Arante</a> of Mandaluyong City, Philippines</p>
+      <p>Powered by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a> and <a href="https://www.freecodecamp.com/">freeCodeCamp</a></p>
     </footer>
   </div>
 
